fix: added overflow hidden

--- a/src/component/HeroSection/HeroSection.scss
+++ b/src/component/HeroSection/HeroSection.scss
@@ -1,5 +1,9 @@
 @use "@variables" as var;
 
+body {
+  overflow: hidden;
+}
+
 .content-wrapper {
   display: flex;
   flex-direction: column;
